force-app/main/default/objects/Vendor_Contract__c/Vendor_Contract__c.object-meta.xml
<CustomObject>
    <description>Fixed monthly vendor service agreement for trash and maintenance (FSD 5.10.3). These services have no meter and no consumption, so they carry a recurring monthly amount instead of meter readings and charge lines.</description>
    <label>Vendor Contract</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Vendor Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <!--
      Standard Contract was evaluated and rejected, because ARCHITECTURE and FSD section 2
      principle 4 require standard objects first, with each custom object justified.
      Standard Contract is AccountId scoped and carries its own activation, status and
      ContractTerm lifecycle; this record is property scoped and has no activation lifecycle
      at all. The only shape the two share is a start and an end date.

      Private OWD plus a criteria sharing rule, matching Property_Asset__c and
      Work_Order__c. Not ControlledByParent, because Property_Asset__c is a lookup here
      rather than a master detail: a vendor contract can legitimately cover a portfolio
      level service with no single property, which a master detail would forbid.
    -->
</CustomObject>