force-app/main/default/objects/Vendor_Contract__c/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property this fixed monthly service covers. Lookup rather than master detail because a service can legitimately be contracted at portfolio level with no single property, which a master detail would forbid.</description>
    <inlineHelpText>The property the service is provided at. Leave blank only for a portfolio wide agreement that genuinely covers no single property.</inlineHelpText>
    <label>Property</label>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>Vendor Contracts</relationshipLabel>
    <relationshipName>Vendor_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>