force-app/main/default/objects/Vendor_Contract__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>The vendor supplying this fixed monthly service. Text rather than a lookup to Account, for exactly the same reasons recorded on Meter.Provider_Name__c, and kept identical so the two can be reported together.</description>
    <inlineHelpText>The vendor name exactly as it appears on the invoice. Keep the spelling identical to the same vendor on any meter, so reporting groups them together.</inlineHelpText>
    <label>Provider</label>
    <length>120</length>
    <type>Text</type>
    <!--
      Deliberately named Provider_Name__c, not Provider__c, so that the API name Provider__c
      stays free for a future Lookup(Account) on both this object and Meter__c. See the
      fuller reasoning in Meter__c/fields/Provider_Name__c.field-meta.xml.
    -->
</CustomField>