force-app/main/default/objects/Vendor_Contract__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Which fixed monthly service this contract covers. FSD 5.10.3 names only trash and maintenance, and gives this object no field table at all, so only those two values are seeded and the picklist is left open.</description>
    <inlineHelpText>Trash and Maintenance are the two the specification names. If the service is something else, type it in rather than forcing it into one of these.</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <!--
      UNRESTRICTED, and only two values, both deliberate. FSD 5.10.3 gives this object one
      sentence and no field table, so a restricted two value list would freeze a guess into
      a picklist that this project has measured to be enforced at DML. Inventing extra
      values to pad the list would be worse: they would look specified when they are not.
      Tighten to restricted once the real service taxonomy is confirmed.
    -->
</CustomField>