force-app/main/default/objects/Vendor_Contract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the fixed monthly service begins. Together with the end date it is what separates a live contract from a historical one, since this object carries no status field.</description>
    <inlineHelpText>The first day the service is billed under this agreement. Use the contract start, not the date the record was created.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>