force-app/main/default/objects/Vendor_Contract__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The space this service covers, where it is space specific rather than building wide. Mirrors the meaning of the same field on Meter: blank means the whole property, not missing data.</description>
    <inlineHelpText>Leave blank if the service covers the whole property, which is the normal case for trash. Fill it in only where one suite is billed separately.</inlineHelpText>
    <label>Unit Space</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Vendor Contracts</relationshipLabel>
    <relationshipName>Vendor_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>