force-app/main/default/objects/Vendor_Contract__c/listViews/All_Vendor_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Vendor_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Provider_Name__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Monthly_Amount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Vendor Contracts</label>
</ListView>