force-app/main/default/objects/Vendor_Contract__c/listViews/Trash_Contracts.listView-meta.xml
<ListView>
    <fullName>Trash_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Provider_Name__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Monthly_Amount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Type__c</field>
        <operation>equals</operation>
        <value>Trash</value>
    </filters>
    <label>Trash Contracts</label>
</ListView>